<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/scheduler_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule" />


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/repeated_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_once"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/once" />

            <RadioButton
                android:id="@+id/radio_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat" />
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/day_choose_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/day_of_week_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_of_week" />

            <CheckBox
                android:id="@+id/chk_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_sunday" />

            <CheckBox
                android:id="@+id/chk_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_monday" />

            <CheckBox
                android:id="@+id/chk_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_tuesday" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chk_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_wednesday" />

            <CheckBox
                android:id="@+id/chk_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_thursday" />

            <CheckBox
                android:id="@+id/chk_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_friday" />

            <CheckBox
                android:id="@+id/chk_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_saturday" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/start_on_off_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="When start time comes, device will" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/start_turn_on_off_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turn" />


            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/start_function_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/start_radio_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/on" />

                <RadioButton
                    android:id="@+id/start_radio_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/off" />
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/set_start_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_start_date_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/startDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/hint_set_start_date" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/startTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/hint_set_start_time" />


            </LinearLayout>

        </LinearLayout>


        <CheckBox
            android:id="@+id/checkbox_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:fontFamily="Segoe UI"
            android:text="@string/check_end_date"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/end_date_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/end_on_off_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="When end time comes, device will" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/end_turn_on_off_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/turn" />


                    <TextView
                        android:id="@+id/end_turn_on_off_text_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/off"
                        android:textColor="@color/red"/>

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/set_end_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/set_end_date_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="center"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/endDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/hint_set_end_date" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="center"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/endTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/hint_set_end_time" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="4dp"
            android:background="@color/light_blue"
            android:text="@string/btn_confirm" />

    </LinearLayout>

</LinearLayout>