<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="10dp">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.14"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/current_pass_text"
            android:gravity="center|bottom"/>

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/resetCurrentPassWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/resetCurrentPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_pass"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/resetPassNew"
            android:textColorHint="@color/input_default_hint" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.14"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/new_pass_text"
            android:gravity="center|bottom"/>

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/resetPassNewWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/resetPassNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_pass"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/resetPassConfirm"
            android:textColorHint="@color/input_default_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/resetPassConfirmWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/resetPassConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_new_pass"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/btnResetPass"
            android:textColorHint="@color/input_default_hint"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnResetPass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/light_blue"
        android:text="@string/reset_password"
        android:textColor="@color/white" />

</LinearLayout>